[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scenes/game_world/lobby.gd" id="1_script"]

[node name="Lobby" type="Node2D"]
script = ExtResource("1_script")

[node name="TileMap" type="TileMap" parent="."]
format = 2

[node name="PlayersContainer" type="Node2D" parent="."]
unique_name_in_owner = true

[node name="SpawnPoint" type="Marker2D" parent="."]
unique_name_in_owner = true
position = Vector2(576, 324)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ChatUI" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -400.0
offset_top = -250.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 0
grow_vertical = 0

[node name="ChatLog" type="RichTextLabel" parent="CanvasLayer/ChatUI"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = -40.0
grow_horizontal = 2
grow_vertical = 2
bbcode_enabled = true
scroll_following = true

[node name="ChatInput" type="LineEdit" parent="CanvasLayer/ChatUI"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -30.0
grow_horizontal = 2
grow_vertical = 0
placeholder_text = "Escribe un mensaje... (/me, /roll, //)"
